objects/Test__c.object
<CustomObject>
    <fields>
        <fullName>Add_Metadata__c</fullName>
        <label>Add Metadata</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Commit__c</fullName>
        <label>Standard Commit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <label>Test 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field_1__c</fullName>
        <label>Test Field 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>